testsuite/tests/typing-missing-cmi-indirections/test.compilers.reference
File "client.ml", line 2, characters 0-19:
2 | and alias = missing
    ^^^^^^^^^^^^^^^^^^^
Error: 
       alias has layout any, which is not a sublayout of value.
